Move JVM flags from the sbt script to build.sbt
Problem / Solution

We should be defining the JVM flags as part of the build, not part of
the sbt script, so lets move them.

JIRA Issues: CSL-8245

Differential Revision: https://phabricator.twitter.biz/D354562